@@ -111,7 +111,7 @@ $lang['admin']['prompt_smarty_cachemodules'] = 'Cache module calls';
 $lang['admin']['info_smarty_compilecheck'] = 'If disabled, smarty will not check the modification dates of templates to see if they have been modified.  This can significantly improve performance.  However performing any template change (or even some content changes) may require a cache clearing';
 $lang['admin']['prompt_smarty_compilecheck'] = 'Do a Compilation Check';
 $lang['admin']['info_smarty_options'] = 'The following options have effect only when the above caching options are enabled';
-$lang['admin']['info_smarty_caching'] = 'When enabled, the output from various plugins will be cached to increase performance.  This only applies to output on content pages marked as cachable, and only for non-admin users.  Note, this functionality may interfere with the behavior of some modules or plugins, or plugins that use non-inline forms.';
+$lang['admin']['info_smarty_caching2'] = 'When enabled, the output from various plugins will be cached to increase performance.  This only applies to output on content pages marked as cachable, and only for non-admin users.  Note, this functionality may interfere with the behavior of some modules or plugins, or plugins that use non-inline forms.  This option has no effect for users of PHP 5.2.x';
 $lang['admin']['prompt_use_smartycaching'] = 'Enable Smarty Caching';
 $lang['admin']['smarty_settings'] = 'Smarty Settings';
 $lang['admin']['help_function_cms_init_editor'] = <<<EOT
