@@ -71,7 +71,7 @@ function getSupportedDBDriver()
 function getTestValues( $property )
 {
 	$range = array(
-		'php_version'			=> array('minimum'=>'5.2.4', 'recommended'=>'5.2.12'),
+		'php_version'			=> array('minimum'=>'5.2.4', 'recommended'=>'5.3.2'),
 		'gd_version'			=> array('minimum'=>2),
 		'memory_limit'			=> array('minimum'=>'16M', 'recommended'=>'24M'),
 		'max_execution_time'	=> array('minimum'=>30, 'recommended'=>60),
