@@ -10,6 +10,8 @@ Core - General
   - Fix displaying of page title in NCleanGrey admin theme.
   - Fixes to preview and submit in editcontent with lots of content blocks (particularly content_image}
   - The cms_stylesheet plugin is no longer cachable by smarty.
+  - Recommend PHP 5.3.2 or greater.
+  - Smarty caching now disabled for PHP 5.2.x
 
 Version 1.11.2.1
 -----------------------------
